client/css/main.css
/* ... */
    
    @font-face {
        font-family: 'AdvoCut';
        src: url('../fonts/advocut-webfont.eot');
        src: url('../fonts/advocut-webfont.eot?#iefix') format('embedded-opentype'),
             url('../fonts/advocut-webfont.woff') format('woff'),
             url('../fonts/advocut-webfont.ttf') format('truetype'),
             url('../fonts/advocut-webfont.svg#AndinaRegular') format('svg');
        font-weight: normal;
        font-style: normal;

    }

	.gp {font-family: 'GraphicPixel', sans-serif;}

/* General Layout */	
	

    html {-webkit-text-size-adjust: 100%}
	html, body {height:100%;}
	
	body {padding:0;margin:0;background:#111;overflow:hidden;image-rendering:-moz-crisp-edges; image-rendering:-webkit-optimize-contrast;}
	
	canvas { position:absolute;image-rendering:optimizeSpeed;}
	#background { background:url('../img/common/loading.png') no-repeat center center, #000;}
	.error #background { background:url('../img/common/loading-error.png') no-repeat center center, #000;}
	
	#background, #foreground { margin:0; padding:0;}
    
    #achievements nav::selection {background:transparent;text-decoration:none;color:transparent;}
    #canvas, #bar-container, #bubbles, #chatbox, #canvasborder, #foreground, #background, footer, #container, #achievement-notification {-moz-user-select:none;-webkit-user-select:none;-o-user-select:none;-ms-user-select:none;}
    
    .started #canvas {cursor:none;}
    
    #foreground { 
       -webkit-tap-highlight-color:rgba(0,0,0,0);
       /* -webkit-touch-callout:none; */
       /* margin:0 auto;
       display:block;*/
    }


	@media screen and (max-width: 600px) {
		
		#entities {
			cursor: default;
		}
	}

    h1 {font-weight:normal;}
    
    .preload {display:none;}
    
/* Common rules */
    
    body.upscaled.game {background:#000;}
    .game #logo {display:none;-moz-animation:none;-webkit-animation:none;-o-animation:none;-ms-animation:none;animation:none;}
        
    #logo, #logosparks, .left-ornament, .right-ornament, #character, #character div, .button, .button div, #respawn, #scroll, #instructions, .icon, #tilt, .parchment-left, .parchment-middle, .parchment-right, .avatar, .facebook, .twitter, .close, #note, .ribbon .top, .ribbon .bottom, #about .img, .ext-link {background:url('../img/1/spritesheet.png');image-rendering:-moz-crisp-edges; image-rendering:-webkit-optimize-contrast;}
    
    #vignetting {height:100%;width:100%;position:absolute;top:0;left:0;pointer-events:none;}
    #logosparks {display:block;position:absolute;top:0;left:0;}
    #parchment, #parchment input {font-family:'GraphicPixel';}
    #parchment input {width:50%;background:rgba(0,0,0,0.05);text-align:center;-moz-animation:glow 0.5s linear infinite alternate;-webkit-animation:glow 0.5s linear infinite alternate;-o-animation:glow 0.5s linear infinite alternate;-ms-animation:glow 0.5s linear infinite alternate;color:#eee;}
    #parchment input:focus {-moz-animation:none;-webkit-animation:none;-o-animation:none;-ms-animation:none;animation:none;color:#fff;background:rgba(0,0,0,0.1);border-color:rgba(0,0,0,0.3);}

    #character div {-moz-transition:0.4s opacity linear;-webkit-transition:0.4s opacity linear;-o-transition:0.4s opacity linear;-ms-transition:0.4s opacity linear;transition:0.4s opacity linear;}

    .play div {position:absolute;top:0;left:0;opacity:1;-moz-transition:0.4s linear opacity;-webkit-transition:0.4s linear opacity;-o-transition:0.4s linear opacity;-ms-transition:0.4s linear opacity;transition:0.4s linear opacity}
    .play.disabled div {opacity:0;pointer-events:none;}
    .play img {display:none;}
    .play.loading img {display:block;position:absolute;top:54%;left:50%;}

    #mask {height:100%;width:100%;position:fixed;top:0;left:0;background:rgba(20,20,20,1);opacity:1;z-index:20;-moz-transition:0.5s opacity linear;-webkit-transition:0.5s opacity linear;-o-transition:0.5s opacity linear;-ms-transition:0.5s opacity linear;transition:0.5s opacity linear;pointer-events:none;}

    #bar-container {background:url('../img/1/barsheet.png');image-rendering:-moz-crisp-edges;position:relative;width:100%;z-index:10;}
    #healthbar {background:url('../img/1/barsheet.png');image-rendering:-moz-crisp-edges;position:absolute;}
	#hitpoints {background:#d83939;-moz-transition:.5s width ease;-webkit-transition:.5s width ease;-o-transition:.5s width ease;-ms-transition:.5s width ease;transition:.5s width ease;}
    #hitpoints.white {-moz-animation:flash 0.5s linear 1;-webkit-animation:flash 0.5s linear 1;-o-animation:flash 0.5s linear 1;-ms-animation:flash 0.5s linear 1;animation:flash 0.5s linear 1;}
	#hitpoints.invincible {-moz-animation:invincible 0.3s steps(3, end) alternate infinite;-webkit-animation:invincible 0.3s steps(3, end) alternate infinite;-o-animation:invincible 0.3s steps(3, end) alternate infinite;-ms-animation:invincible 0.3s steps(3, end) alternate infinite;}
    
    #notifications {position:absolute;left:50%;text-align:center;font-family:'GraphicPixel';overflow:hidden;}
    #notifications div {position:absolute;-moz-transition:none;-webkit-transition:none;top:0;width:100%;}
    #notifications div.top {-moz-transition:0.5s top ease;-webkit-transition:0.5s top ease;-o-transition:0.5s top ease;-ms-transition:0.5s top ease;transition:0.5s top ease;}
    #notifications div.top #message1 {opacity:0;-moz-transition:0.2s opacity linear;-webkit-transition:0.2s opacity linear;-o-transition:0.2s opacity linear;-ms-transition:0.2s opacity linear;transition:0.2s opacity linear;}
    #notifications span {display:block;text-align:center;width:100%;opacity:1;-moz-user-select:none;-webkit-user-select:none;}
    
    #playercount {font-family:'GraphicPixel';color:#e3e3e3;position:absolute;}
    #playercount:hover {cursor:pointer;color:#FCE045;}
/* ... */

